--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,34 @@ repositories {
 }
 
 dependencies {
+
+	// AssertJ
+	testImplementation 'org.assertj:assertj-core:3.18.1'
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok:1.18.16'
+	annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+	// DozerMapper
+	implementation 'com.github.dozermapper:dozer-core:6.4.0'
+
+	// Spring Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Spring Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// Spring Data JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
+
+	// Spring Developer Tools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// Mustache
+	implementation('org.springframework.boot:spring-boot-starter-mustache')
+
+	// Spring Boot Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
