--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.output.ansi.enabled=always
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+spring.mustache.cache=false
+spring.mustache.prefix=file:src/main/resources/templates/
+
+spring.resources.static-locations=file:src/main/resources/static/
 
