chore: 마리아디비 의존성 제거

--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,8 @@ dependencies {
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok:1.18.16'
-	annotationProcessor 'org.projectlombok:lombok:1.18.16'
-	
-	// MariaDB
-        runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
-	
+	annotationProcessor 'org.projectlombok:lombok:1.18.
+
 	// DozerMapper
 	implementation 'com.github.dozermapper:dozer-core:6.4.0'
 
